# build_tests-cmake-deps_target_dependency

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  deps_target_dependency-config.cmake
test/: CMakeLists.txt  test_Dummy.cpp
